--- a/src/components/PostItem/PostItem.scss
+++ b/src/components/PostItem/PostItem.scss
@@ -16,3 +16,22 @@
 .text .title {
     font-size: 1.2em;
 }
+.author {
+    display: flex;
+    padding-left: 5px;
+    align-items: center;
+    gap: 10px;
+    font-size: 1.3em;
+}
+.avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 100%;
+    color: white;
+    background-color: cadetblue;
+    font-family: 'Roboto';
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 1.2em;
+}
