--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,39 +1,39 @@
-
-
 @font-face {
-    font-family: 'PageTitleFont';
-    src: url(../src/assets/fonts/Chomsky.otf) format('opentype');
-    font-weight: bold;
-    font-style: normal;
+  font-family: "PageTitleFont";
+  src: url(../src/assets/fonts/Chomsky.otf) format("opentype");
+  font-weight: bold;
+  font-style: normal;
 }
 
 .header div {
-    border-bottom: 1px solid rgb(216, 216, 216);
-    display: flex;
-    width: 100%;
-    align-items: center;
-    
+  border-bottom: 1px solid rgb(216, 216, 216);
+  display: flex;
+  width: 100%;
+  align-items: center;
 }
 
 .title-block {
-    padding: 10px 20px;
-    justify-content: space-between;
-    flex-direction: row;
-    position: relative;
+  padding: 10px 20px;
+  justify-content: space-between;
+  flex-direction: row;
+  position: relative;
 }
 .date-block {
-    padding: 7px 20px;
-    justify-content: center;
-    font-family: "Roboto", sans-serif;
-    font-weight: bold;
-    font-size: 0.84rem;
+  padding: 7px 20px;
+  justify-content: center;
+  font-family: "Roboto", sans-serif;
+  font-weight: bold;
+  font-size: 0.84rem;
 }
 
-
 .page-name {
-    font-family: 'PageTitleFont', sans-serif;
-    font-size: 2rem;
-    position: absolute;
-    left: 50%;
-    transform: translate(-50%);
+  font-family: "PageTitleFont", sans-serif;
+  font-size: 2.3rem;
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%);
+}
+MenuIcon {
+  width: 100px;
+  height: 100px;
 }
