--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -1,6 +1,6 @@
 @font-face {
   font-family: "PageTitleFont";
-  src: url(../src/assets/fonts/Chomsky.otf) format("opentype");
+  src: url(../src/fonts/Chomsky.otf) format("opentype");
   font-weight: bold;
   font-style: normal;
 }
