--- a/src/components/PostItem/PostItem.scss
+++ b/src/components/PostItem/PostItem.scss
@@ -24,7 +24,7 @@
 
     font-size: 1rem;
 }
-.post-box .header {
+.post-box .post-header {
     display: flex;
     justify-content: space-between;
     font-family: 'Roboto';
