--- a/src/components/PostList/PostList.scss
+++ b/src/components/PostList/PostList.scss
@@ -1,9 +1,10 @@
 .container {
-    padding-top: 50px;
+    padding-top: 30px;
     display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    max-width: 70vw;
-    align-items: center;
+    flex-wrap: wrap;
     row-gap: 50px;
+    column-gap: 70px;
+    justify-content: center;
+    align-items: center;
 }
+
