--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -6,19 +6,26 @@
 }
 
 .header div {
+  background-color: #ffff;
   border-bottom: 1px solid rgb(216, 216, 216);
   display: flex;
   width: 100%;
   align-items: center;
+  position: static;
+  z-index: 1000; 
 }
 
 .title-block {
   padding: 10px 20px;
+  display: flex;
   justify-content: space-between;
   flex-direction: row;
-  position: relative;
+  position: fixed !important; 
+  top: 0;
+  z-index: 10;
 }
 .date-block {
+  margin-top: 60px;
   padding: 7px 20px;
   justify-content: center;
   font-family: "Roboto", sans-serif;
@@ -26,12 +33,10 @@
   font-size: 0.84rem;
 }
 
+
 .page-name {
   font-family: "PageTitleFont", sans-serif;
   font-size: 2.3rem;
-  position: absolute;
-  left: 50%;
-  transform: translate(-50%);
 }
 MenuIcon {
   width: 100px;
