empty list const

--- a/src/components/PostItem/PostItem.scss
+++ b/src/components/PostItem/PostItem.scss
@@ -1,104 +1,100 @@
 .post-box {
-
-    margin: 40px;
-    position: relative;
-    display: flex;
-    height: 300px;
-    width: 920px;
-    justify-content: space-between;
-    align-items: center;
-    transition: .3s;
-    transform-origin: right top;
+  margin: 40px;
+  position: relative;
+  display: flex;
+  height: 300px;
+  width: 920px;
+  justify-content: space-between;
+  align-items: center;
+  transition: 0.3s;
+  transform-origin: right top;
 }
 .post-box:hover {
-    
-    box-shadow: 7px -7px 0 #4e4e4e;
-    transform: translateX(-7px) translateY(7px);
-    border: 1px solid black;
+  box-shadow: 7px -7px 0 #4e4e4e;
+  transform: translateX(-7px) translateY(7px);
+  border: 1px solid black;
 }
 
 .image {
-    width: 370px;
-    height: 300px;
-    border-radius: 6px;
+  width: 370px;
+  height: 300px;
+  border-radius: 6px;
 }
 
 .separation {
-    height: 110%;
-    border-left: 1px solid black;
-    transition: 0.3s;
+  height: 110%;
+  border-left: 1px solid black;
+  transition: 0.3s;
 }
-.post-box:hover .separation{
-    height: 85%;
+.post-box:hover .separation {
+  height: 85%;
 }
 .text {
-    width: 490px;
-    height: 300px;
+  width: 490px;
+  height: 300px;
 
-    font-size: 1rem;
+  font-size: 1rem;
 }
 .post-box .post-header {
-    display: flex;
-    justify-content: space-between;
-    font-family: 'Roboto';
+  display: flex;
+  justify-content: space-between;
+  font-family: "Roboto";
 }
 
 .post-header {
-    margin: 10px;
+  margin: 10px;
 }
 
 .title {
-    font-size: 1.7em;
-    width: 320px;
+  font-size: 1.7em;
+  width: 320px;
 }
 .date {
-    white-space: nowrap;
-    font-size: 0.8rem;
-    color: gray;
-    font-style: italic;
+  white-space: nowrap;
+  font-size: 0.8rem;
+  color: gray;
+  font-style: italic;
 }
 .content {
-    padding-top: 19px;
-    font-family: 'Roboto';
-    hyphens: auto;
+  padding-top: 19px;
+  font-family: "Roboto";
+  hyphens: auto;
 }
 .author {
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
-    font-size: 1.3em;
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  font-size: 1.3em;
 }
 .avatar {
-    width: 33px;
-    height: 33px;
-    border-radius: 100%;
-    color: white;
-    background-color: rgb(117, 117, 117);
-    font-family: 'Roboto';
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 0.95em;
+  width: 33px;
+  height: 33px;
+  border-radius: 100%;
+  color: white;
+  background-color: rgb(117, 117, 117);
+  font-family: "Roboto";
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 0.95em;
 }
 .author-name {
-    font-family: 'Roboto';
-    font-size: 1rem;
+  font-family: "Roboto";
+  font-size: 1rem;
 }
 .card {
-    position: relative;
+  position: relative;
 }
 
 .card:not(:first-of-type, :nth-of-type(2))::after {
-    content: ' ';
-    position: absolute;
-    top: -25px;
-    left: -150px;
-    border-top: 1px solid rgb(219, 219, 219);
-    width: 1250px;
-    will-change: contents;
-    
+  content: " ";
+  position: absolute;
+  top: -25px;
+  left: -150px;
+  border-top: 1px solid rgb(219, 219, 219);
+  width: 1250px;
+  will-change: contents;
 }
-
