--- a/src/components/AuthForm/AuthForm.scss
+++ b/src/components/AuthForm/AuthForm.scss
@@ -16,21 +16,66 @@ $element-width: 83%;
     z-index: 9999;
     background: #0000002f;
     backdrop-filter: blur(3px);
+    transition: 0.3s;
+    display: flex;
+    justify-content: center;
+    // align-items: center;
+    animation: back .5s linear;
+
+
+    .modal-window {
+        width: 600px;
+        height: 440px;
+        border-top: 1px solid #d6d6d6;
+        background-color: rgb(255, 255, 255);
+        transition: .3s;
+        animation: ded .5s cubic-bezier(.61, -0.31, .44, 1.29);
+        position: relative;
+    }
 }
-
-
-.modal-window {
-    width: 600px;
-    height: 440px;
-    background-color: rgb(255, 255, 255);
-    position: absolute;
-    top: 5%;
-    left: 50%;
-    transform: translate(-50%);
-    z-index: 10000;
-    box-shadow: 0px 0px 57px 15px rgba(34, 60, 80, 0.2);
+@keyframes back {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
 }
+// .modal-window::before {
+//     content: ' ';
+//     height: 100px;
+//     width: 600px;
+//     background-color: #fff;
+//     position: absolute;
+//     top: -100px;
+//     border-bottom: 1px solid #d6d6d6;
 
+// }
+// .modal-window {
+//     width: 600px;
+//     height: 440px;
+//     background-color: rgb(255, 255, 255);
+//     position: absolute;
+//     top: -10%;
+//     left: 50%;
+    
+//     z-index: 10000;
+//     box-shadow: 0px 0px 57px 15px rgba(34, 60, 80, 0.2);
+//     transition: 0.3s;
+//     transform-origin: top;
+//     transform: translateY(-500%) translateX(-50%);
+//     animation: ded, 1s, ease-in;
+// }
+
+@keyframes ded {
+    0% {
+        
+        transform: translateY(-200%);
+    }
+    100% {
+        transform: translateY(0%);
+    }
+}
 .auth-form {
     display: flex;
     flex-direction: column;
