--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,7 +5,7 @@
   font-style: normal;
 }
 
-.header div {
+.header div:not(.user) {
   background-color: #ffff;
   border-bottom: 1px solid rgb(216, 216, 216);
   display: flex;
@@ -28,3 +28,15 @@
   font-size: 2.3rem;
 }
 
+.user {
+  padding: 3px 6px 0 6px;
+  border-radius: 6px;
+  transition: 0.3s;
+}
+.user:hover {
+  background-color: #ececec;
+}
+.user.focus {
+  background-color: #c5c5c5;
+  border: 1px solid black;
+}
