--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -36,7 +36,6 @@
 .user:hover {
   background-color: #ececec;
 }
-.user.focus {
+.user.active {
   background-color: #c5c5c5;
-  border: 1px solid black;
 }
