registration form component

--- a/src/components/AuthForm/AuthForm.scss
+++ b/src/components/AuthForm/AuthForm.scss
@@ -19,18 +19,21 @@ $element-width: 83%;
     transition: 0.3s;
     display: flex;
     justify-content: center;
-    // align-items: center;
+    align-items: flex-start;
     animation: back .5s linear;
 
 
     .modal-window {
         width: 600px;
-        height: 440px;
+        // height: 520px;
         border-top: 1px solid #d6d6d6;
         background-color: rgb(255, 255, 255);
         transition: .3s;
         animation: ded .5s cubic-bezier(.61, -0.31, .44, 1.29);
         position: relative;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
 @keyframes back {
@@ -40,6 +43,11 @@ $element-width: 83%;
     100% {
         opacity: 1;
     }
+}
+
+.newacc-button {
+    margin-top: 40px;
+    margin-bottom: 30px;
 }
 // .modal-window::before {
 //     content: ' ';
@@ -76,64 +84,12 @@ $element-width: 83%;
         transform: translateY(0%);
     }
 }
-.auth-form {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.newacc-button {
+    margin-top: 46px;
 }
-
-.form-header {
-    margin: 30px;
-    margin-bottom: 0px;
-    font-size: 2rem;
-    font-family: "HeaderFont", sans-serif;
-
-}
-.input-title {
-    align-self: start;
-    margin-top: 27px;
-    margin-left: 55px;
-    margin-bottom: 5px;
-    font-size: 1.1rem;
-    font-family: "Roboto", sans-serif;
-    font-weight: bold;
-}
-.input-field {
-    width: $element-width;
-    height: 65px;
-    font-size: 1.4rem;
-    padding-left: 20px;
-}
-
-.submit-button {
-    position: relative;
-    margin-top: 24px;
-    width: $element-width;
-    height: 55px;
-    font-family: "Roboto" sans-serif;
-    font-weight: bold;
-    font-size: 1.25rem;
-    color: #fff;
-    background-color: #000;
-    border-radius: 4px;
-    transition: 0.3s;
-
-    
-}
-
-.submit-button::after {
-    position: absolute;
-    bottom: -50%;
-    left: 50%;
-    transform: translate(-50%);
-    content: ' ';
-    border-bottom: 2px solid #000;
-    width: 500px;
-    height: 1px;
-}
-.submit-button:hover {
-    background-color: #3f3f3f;
-}
-.submit-button:active {
-    background-color: #a8a8a8;
-}
+// .separator {
+//     position: relative;
+//     bottom: -60%;
+//     // left: 50%;
+//     transform: translate(-50%);
+// }
